# Stock

.devcontainer/: devcontainer.json
StockTracker/: README.md  deploy_to_heroku.sh  main.py  pasted_text_1726306876185.txt  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt
StockTracker/StockTracker/: main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
StockTracker/git/: COMMIT_EDITMSG  ORIG_HEAD  config  index
StockTracker/git/logs/refs/heads/: main
StockTracker/git/logs/refs/remotes/heroku/: main
StockTracker/git/refs/heads/: main
StockTracker/git/refs/remotes/heroku/: main
StockTracker/upm/: store.json
