[tool.poetry]
name = "repl-nix-stocktracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.28.2"
yfinance = "0.2.31"
plotly = "5.18.0"
pandas = "2.1.3"
fuzzywuzzy = "0.18.0"
python-levenshtein = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
