[tool.poetry]
name = "repl-nix-stocktracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.29.0"
yfinance = "^0.2.43"
plotly = "^5.24.1"
pandas = "2.1.4"
fuzzywuzzy = "^0.18.0"
alpha-vantage = "^3.0.0"
spacy = "3.7.4"
beautifulsoup4 = "^4.12.3"
nltk = "^3.9.1"
newspaper3k = "0.2.8"
numpy = ">=1.26.0,<2.0.0"
thinc = ">=8.2.2,<8.3.0"
pyarrow = "14.0.1"
pydeck = "0.8.0"
protobuf = ">=3.20,<5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
