[tool.poetry]
name = "repl-nix-stocktracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
yfinance = "^0.2.43"
plotly = "^5.24.1"
pandas = "^2.2.2"
fuzzywuzzy = "^0.18.0"
alpha-vantage = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
